rewrote crawler using OOP principals

--- a/InfoTrackSeo/InfoTrackSeo.csproj
+++ b/InfoTrackSeo/InfoTrackSeo.csproj
@@ -126,7 +126,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Helpers\Crawler.cs" />
+    <Compile Include="Helpers\CrawlerV2.cs" />
+    <Compile Include="Helpers\Extensions\FindIndex.cs" />
+    <Compile Include="Helpers\ChildElementLocator.cs" />
+    <Compile Include="Helpers\ParentElementLocator.cs" />
     <Compile Include="Models\HomeViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
